@@ -1,3 +1,8 @@
+2006-06-08  David Reveman  <davidr@novell.com>
+
+	* plugins/minimize.c (minHandleEvent): Make sure we adjust the window
+	region correctly when it's being unshaded.
+
 2006-06-07  David Reveman  <davidr@novell.com>
 
 	* configure.ac: Bump version to 0.0.13.
